feat(sync): harden p2p replication flow